# hid-brightness-go

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  config.txt  config.txt.example  go.mod
cmd/hid-brightness/: main.go  rsrc.syso  ultrafine-brightness.exe.manifest
cmd/test-hid/: main.go
internal/bridge/: winrt_bridge.cpp  winrt_bridge.h
internal/config/: config.go
internal/ui/: ui.go  ui_other.go  ui_windows.go
pkg/als/: als.go  als_windows.go
pkg/hid/: hid.go  hid_windows.go
